# xmtp-go-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  client.go  conversation.go  conversations.go  dm.go  flake.nix  go.mod  group.go  message.go  preferences.go  sdk_test.go  stream.go  types.go
cmd/connect/: main.go
examples/simple/: main.go
ffi/: Cargo.toml  build.rs
ffi/src/: client.rs  conversation.rs  conversations.rs  error.rs  lib.rs  message.rs  signer.rs  types.rs  xmtp_client.rs
internal/ffi/: client.go  ffi.go  ffi_test.go  helpers.go  strings.go  types.go  xmtpv3_shim.h
